--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,7 @@ body {
     background-color: #d9dcd6;
 }
 
+/* header styles start*/
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -40,6 +41,7 @@ body {
     display: inline-block;
     margin-left: 25px;
 }
+/*header styles end*/
 
 a {
     color: #ffffff;
@@ -59,6 +61,7 @@ p {
     background-position: center;
 }
 
+/*content styles start*/
 .float-left {
     float: left;
     margin-right: 25px;
@@ -74,7 +77,9 @@ p {
     display: inline-block;
     margin-left: 20px;
 }
+/*content styles end*/
 
+/*benifits styles start*/
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -86,53 +91,22 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+.benefit-divs {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
+.benefit-divs h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
+.benefit-divs img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
+/*benefits styles end*/
 
 .search-engine-optimization {
     margin-bottom: 20px;
