more css consolidation and comments

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,9 +4,15 @@
     margin: 0;
 }
 
+/*body styles start*/
 body {
     background-color: #d9dcd6;
 }
+
+p {
+    font-size: 16px;
+}
+/*body styles end*/
 
 /* header styles start*/
 .header {
@@ -41,17 +47,14 @@ body {
     display: inline-block;
     margin-left: 25px;
 }
-/*header styles end*/
 
 a {
     color: #ffffff;
     text-decoration: none;
 }
+/*header styles end*/
 
-p {
-    font-size: 16px;
-}
-
+/*hero styles start*/
 .hero {
     height: 800px;
     width: 100%;
@@ -60,6 +63,7 @@ p {
     background-size: cover;
     background-position: center;
 }
+/* hero styles end*/
 
 /*content styles start*/
 .float-left {
@@ -76,6 +80,24 @@ p {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
+}
+
+.content-articles {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+.content-articles img {
+    max-height: 200px;
+}
+
+.content-articles h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
 }
 /*content styles end*/
 
@@ -108,60 +130,7 @@ p {
 }
 /*benefits styles end*/
 
-.search-engine-optimization {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization img {
-    max-height: 200px;
-}
-
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
+/*footer styles start*/
 .footer {
     padding: 30px;
     clear: both;
@@ -172,3 +141,4 @@ p {
 .footer h2 {
     font-size: 20px;
 }
+/*footer styles end*/
